gitops/infrastructure/istio/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts:
    - "lixiaojun.io"
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: "/argocd"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: argocd-server
            port:
              number: 443
          weight: 100
